--- a/package.json
+++ b/package.json
@@ -1,8 +1,76 @@
 {
-  "name": "rollup-plugin-reproduction",
-  "version": "1.0.0",
-  "description": "Please fork this REPL to create a quick reproduction for reporting issues. Provide the link to your fork in the issue you create. ",
+  "name": "poc-tracker",
+  "version": "1.0.6",
+  "description": "Base tracker",
+  "keywords": [],
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.es.js",
+  "typings": "./types/index.d.ts",
+  "files": [
+    "dist",
+    "types"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "clean": "rimraf lib types",
+    "dev": "cross-env NODE_ENV=development rollup -c -w rollup.config.js",
+    "build": "cross-env-shell NODE_ENV=production \"yarn clean && rollup -c rollup.config.js\"",
+    "doc": "typedoc --out docs --target es6 --theme minimal --mode file src",
+    "start": "rollup -c rollup.config.ts -w",
+    "test": "jest --coverage",
+    "lint:js": "eslint --ext .js,.ts,.vue --ignore-path ../../.gitignore src",
+    "lint:style": "stylelint **/*.{vue,css} --ignore-path ../../.gitignore",
+    "lint": "yarn lint:js && yarn lint:style"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-url": "^6.0.0",
+    "@types/jest": "^26.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "@vuex-orm/core": "^0.36.3",
+    "builtin-modules": "^3.1.0",
+    "cross-env": "^7.0.2",
+    "cssnano": "^4.1.10",
+    "eslint": "^7.12.1",
+    "eslint-plugin-vue": "^7.1.0",
+    "jest": "^26.3.0",
+    "jest-config": "^26.3.0",
+    "postcss-assets": "^5.0.0",
+    "postcss-pxtorem": "^5.1.1",
+    "rimraf": "^3.0.0",
+    "rollup": "^2.36.1",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "rollup-plugin-vue": "^5.1.9",
+    "stylus": "^0.54.8",
+    "ts-jest": "^26.4.3",
+    "ts-node": "^9.0.0",
+    "typedoc": "^0.19.2",
+    "typescript": "^4.0.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.3",
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.5.1"
+  },
   "dependencies": {
-    "rollup": "^1.27.14"
+    "@analytics/snowplow": "^0.2.2",
+    "@nuxt/types": "^2.14.6",
+    "@types/node": "^14.0.27",
+    "analytics": "^0.6.5",
+    "vue-typed-mixins": "^0.2.0"
+  },
+  "peerDependencies": {
+    "@vuex-orm/core": "^0.36.3",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   }
 }
